# atcg_framework

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  PythonFrontend.py  README.md  genindex.html  index.html  objects.inv  processed_README.html  pyproject.toml  search.html  searchindex.js
atcg_lib/: CMakeLists.txt
atcg_lib/include/: ATCG.h  atcgpch.h
atcg_lib/include/Asset/: Asset.h  AssetExporter.h  AssetImporter.h  AssetManagerSystem.h  AssetPanel.h  Project.h
atcg_lib/include/Core/: API.h  Application.cpp  Application.h  CUDA.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Memory.h  Path.h  Platform.h  SystemRegistry.h  UUID.h  Window.h  glm.h
atcg_lib/include/DataStructure/: AccelerationStructure.h  BufferView.h  Dictionary.h  Graph.h  GraphDefinitions.h  GraphLoader.h  Grid.h  Image.h  JPEGDecoder.h  JPEGEncoder.h  Laplacian.h  Mesh.h  PerformancePanel.h  PointCloud.h  RenderMesh.h  Skybox.h  Statistics.h  TextureBuilder.h  Timer.h  TorchUtils.h  Worker.h
atcg_lib/include/Events/: Event.h  KeyEvent.h  MouseEvent.h  VREvent.h  WindowEvent.h
atcg_lib/include/ImGui/: Guizmo.h  ImGuiLayer.h
atcg_lib/include/Math/: Color.h  Constants.h  Functions.h  Random.h  SpectrumData.h  SurfaceInteraciton.h  SurfaceInteraction.h  Tracing.h  Utils.h
atcg_lib/include/Network/: .NetworkUtils.h.swp  NetworkUtils.h  TCPClient.h  TCPServer.h
atcg_lib/include/Noise/: Noise.h
atcg_lib/include/OpenMesh/: GLMTraits.h  OpenMesh.h
atcg_lib/include/Pathtracing/: AccelerationStructure.h  BSDF.h  BSDFModels.cuh  BSDFModels.h  DirectCall.h  Emitter.h  EmitterModels.cuh  EmitterModels.h  Launch.h  MeshShapeData.cuh  Pathtracer.h  PathtracingPlatform.h  PathtracingShader.cuh  PathtracingShader.h  RaytracingPipeline.h  RaytracingShader.h  RaytracingShaderManager.h  ShaderBindingTable.h  ShaderBindingTableDefinition.h  Stubs.h  SurfaceInteraction.h  Tracing.h
atcg_lib/include/Registration/: CPD.h  CPDBackend.h  CPDBackendCPU.h  CPDBackendCUDA.h  NonRigidCPD.h  Registration.h  Transformation.h
atcg_lib/include/Renderer/: BSDF.h  BSDFModels.h  Buffer.h  Camera.h  CameraController.h  CameraUtils.h  Context.h  Framebuffer.h  Material.h  OrthographicCamera.h  Pathtracer.h  PerspectiveCamera.h  Radiosity.h  RenderGraph.h  RenderPass.h  Renderer.h  Shader.h  ShaderCompiler.h  ShaderManager.h  Texture.h  VRRenderer.h  VRSystem.h  VertexArray.h
atcg_lib/include/Renderer/RenderPasses/: ForwardPass.h  ShadowPass.h  SkyboxPass.h
atcg_lib/include/Scene/: ComponentGUIHandler.h  ComponentRenderer.h  ComponentSerializer.h  Components.h  Entity.h  PathtracingPanel.h  RevisionStack.h  Scene.h  SceneHierarchyPanel.h  SceneRenderer.h  Serializer.h
atcg_lib/include/Scripting/: Script.h  ScriptEngine.h
atcg_lib/platform/cpu/include/Pathtracing/: CPUInterface.h  Common.h
atcg_lib/platform/cpu/include/Registration/: CPDBackendCPU.h
atcg_lib/platform/cpu/src/DataStructure/: JPEGDecoder.cpp  JPEGEncoder.cpp
atcg_lib/platform/cpu/src/Math/: Utils.cpp
atcg_lib/platform/cpu/src/Pathtracing/: Pathtracer.cpp  RaytracingPipeline.cpp  ShaderBindingTable.cpp
atcg_lib/platform/cpu/src/Registration/: CPDBackendCPU.cpp
atcg_lib/platform/cpu/src/Renderer/: Pathtracer.cpp
atcg_lib/platform/cuda/include/DataStructure/: JPEGDecoder.h  JPEGEncoder.h  OptixAccelerationStructure.h
atcg_lib/platform/cuda/include/Pathtracing/: BSDFModels.cuh  EmitterModels.cuh  HitGroupData.h  OptixAccelerationStructure.h  OptixInterface.h  OptixRaytracingShader.h  Params.cuh  PathtracingShader.h  Payload.h
atcg_lib/platform/cuda/include/Registration/: CPDBackendCUDA.h
atcg_lib/platform/cuda/include/Renderer/: BSDFModels.cuh  BSDFModels.h  Common.h  Emitter.cuh  Emitter.h  EmitterModels.cuh  EmitterModels.h  HitGroupData.h  OptixInterface.h  Params.cuh  PathtracingShader.h  Payload.h
atcg_lib/platform/cuda/src/: DataStructure.cpp
atcg_lib/platform/cuda/src/DataStructure/: JPEGDecoder.cpp  JPEGEncoder.cpp  OptixAccelerationStructure.cpp
atcg_lib/platform/cuda/src/Math/: Utils.cu
atcg_lib/platform/cuda/src/Pathtracing/: BSDFKernels.cu  BSDFModels.cpp  EmitterKernels.cu  EmitterModels.cu  MeshKernels.cu  OptixAccelerationStructure.cpp  Pathtracer.cpp  PathtracingShader.cpp  PathtracingShader.cu  RaytracingPipeline.cpp  ShaderBindingTable.cpp
atcg_lib/platform/cuda/src/Registration/: CPDBackendCUDA.cu
atcg_lib/platform/cuda/src/Renderer/: BSDFKernels.cu  Common.h  (+15 more)
atcg_lib/platform/python/: pyatcg.h
atcg_lib/platform/python/pyatcg/: __init__.py
atcg_lib/src/Asset/: AssetExporter.cpp  AssetImporter.cpp  AssetManagerSystem.cpp  AssetPanel.cpp  Project.cpp
atcg_lib/src/Core/: Application.cpp  Input.cpp  LayerStack.cpp  Log.cpp  SystemRegistry.cpp  Window.cpp
atcg_lib/src/DataStructure/: AccelerationStructure.cpp  Graph.cpp  GraphLoader.cpp  Image.cpp  Mesh.cpp  PerformancePanel.cpp  PointCloud.cpp  RenderMesh.cpp  Timer.cpp  TorchUtils.cpp  Worker.cpp
atcg_lib/src/ImGui/: Guizmo.cpp  ImGuiLayer.cpp
atcg_lib/src/Math/: ColorDetail.h  FunctionsDetail.h  Tracing.cpp  Utils.cpp  UtilsGeneric.cpp
atcg_lib/src/Network/: TCPClient.cpp  TCPServer.cpp
atcg_lib/src/Noise/: Noise.cpp
atcg_lib/src/Pathtracing/: RaytracingShader.cpp  RaytracingShaderManager.cpp  Tracing.cpp
atcg_lib/src/Registration/: CPD.cpp  CPDBackendCPU.cpp  CPDBackendCUDA.cu  NonRigidCPD.cpp  Registration.cpp
atcg_lib/src/Renderer/: Buffer.cpp  Camera.cpp  CameraController.cpp  CameraUtils.cpp  Context.cpp  ContextManager.cpp  Framebuffer.cpp  Material.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Radiosity.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp  VertexArray.cpp
atcg_lib/src/Renderer/RenderPasses/: ForwardPass.cpp  ShadowPass.cpp  SkyboxPass.cpp
atcg_lib/src/Scene/: ComponentGUIHandler.cpp  ComponentRenderer.cpp  ComponentSerializer.cpp  Components.cpp  PathtracingPanel.cpp  Scene.cpp  SceneHierarchyPanel.cpp  SceneHierarchyPanelDetails.h  SceneRenderer.cpp  Serializer.cpp  SerializerDetail.h
atcg_lib/src/Scripting/: Script.cpp  ScriptEngine.cpp
(+378 files in other folders)
